# hermes-credential-switcher

./: .gitignore  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
hermes_credential_switcher/: __init__.py  __main__.py  aliases.py  cli.py  commands.py  compat.py  locking.py  matching.py  paths.py  redact.py  service.py  session.py  store.py  strategy.py
hermes_credential_switcher/skill/: SKILL.md
scripts/: secret_path_scan.py
tests/: conftest.py  helpers.py  test_aliases_and_paths.py  test_commands_and_registration.py  test_health_reference_entries.py  test_lock_concurrency.py  test_matching.py  test_multi_provider.py  test_plugin_loader_integration.py  test_redaction.py  test_session_compat.py  test_store_safety.py  test_strategy_and_compat.py  test_use_and_reset.py
